[project]
name = "neurotx-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "metaflow>=2.15.7",
    "mlflow>=2.21.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
