[project]
name = "neurotx-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepchem>=2.8.0",
    "keras>=3.9.2",
    "metaflow>=2.15.7",
    "mlflow>=2.21.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "rdkit>=2024.9.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
